--- a/Backend/AccountManager/AccountManager.csproj
+++ b/Backend/AccountManager/AccountManager.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="FirebaseAuthentication.net" Version="4.0.2" />
   </ItemGroup>
 
   <ItemGroup>
