--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.1.7",
+    "antd-password-input-strength": "^2.0.1",
+    "axios": "^1.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
@@ -17,6 +19,8 @@
     "react-scroll": "^1.8.9",
     "react-use-scroll-snap": "^0.0.4",
     "styled-components": "^5.3.6",
+    "universal-cookie": "^4.0.4",
+    "validator": "^13.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
