--- a/Backend/WebApi/WebApi.csproj
+++ b/Backend/WebApi/WebApi.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\AccountManager\AccountManager.csproj" />
     <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\EventManager\EventManager.csproj" />
     <ProjectReference Include="..\Interfaces\Interfaces.csproj" />
   </ItemGroup>
 
