--- a/Backend/WebApi/WebApi.csproj
+++ b/Backend/WebApi/WebApi.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AccountManager\AccountManager.csproj" />
+    <ProjectReference Include="..\AnalyticManager\AnalyticManager.csproj" />
     <ProjectReference Include="..\Common\Common.csproj" />
     <ProjectReference Include="..\EventManager\EventManager.csproj" />
     <ProjectReference Include="..\Interfaces\Interfaces.csproj" />
