Add Docker support

--- a/Backend/WebApi/appsettings.json
+++ b/Backend/WebApi/appsettings.json
@@ -8,5 +8,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": {
+    "apiKey": "AIzaSyBpgn8kkip37VBx-vSecfUkY3JtkCZxoIA",
+    "authDomain": "https://hackathon2023feb-default-rtdb.asia-southeast1.firebasedatabase.app/",
+    "projectId": "hackathon2023feb",
+    "storageBucket": "hackathon2023feb.appspot.com",
+    "messagingSenderId": "950228724693",
+    "appId": "1:950228724693:web:37f52cab81e557b3826b5c",
+    "measurementId": "G-6PFDNTSDC3"
+
+  }
 }
